[gd_scene load_steps=12 format=3 uid="uid://dnmmlpglt0gwy"]

[ext_resource type="Script" path="res://Characters/Player/_prototype/script.gd" id="1_ab3oa"]
[ext_resource type="Texture2D" uid="uid://bcgj8hy56cle8" path="res://Characters/Player/_prototype/sprite_sheet.png" id="1_ok42r"]
[ext_resource type="PackedScene" uid="uid://bfgs11morpot2" path="res://Interface/hud/health_bar/scene_bar.tscn" id="3_qhcwp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_634xb"]
atlas = ExtResource("1_ok42r")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_86wtp"]
atlas = ExtResource("1_ok42r")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_k45ii"]
atlas = ExtResource("1_ok42r")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lmda6"]
atlas = ExtResource("1_ok42r")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r58hi"]
atlas = ExtResource("1_ok42r")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_61tbp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_634xb")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_86wtp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k45ii")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmda6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r58hi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4vsvi"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lfu1v"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
collision_mask = 3
script = ExtResource("1_ab3oa")
max_health = 9
knockback_force = 2000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_61tbp")
animation = &"idle"
autoplay = "idle"
offset = Vector2(0, -32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_4vsvi")

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -32)
zoom = Vector2(2, 2)

[node name="HealthBar" parent="Camera2D" instance=ExtResource("3_qhcwp")]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 280.0
offset_top = -184.0
offset_right = 280.0
offset_bottom = -184.0
grow_horizontal = 0

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_lfu1v")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
